# stylemirror

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
examples/: advanced.py  basic.py
src/: __main__.py  core.py  health.py  utils.py
src/stylemirror/: __init__.py  cli.py  models.py  report.py
src/stylemirror/fashion/: __init__.py  occasions.py  styles.py  trends.py
src/stylemirror/stylist/: __init__.py  body_type.py  color_theory.py  recommender.py  wardrobe.py
tests/: test_benchmark.py  test_body_type.py  test_cli.py  test_color_theory.py  test_core.py  test_fashion.py  test_integration.py  test_models.py  test_recommender.py  test_wardrobe.py
